package ar.utn.donatrack.logistica.models.planificacion;

public enum EstadoLote {
    ENVIADO,
    EN_PROCESO,
    COMPLETADO,
    ERROR
}
