package ar.utn.donatrack.logistica.models.planificacion;

public enum EstadoRuta {
    PLANIFICADA,
    INICIADA,
    FINALIZADA
}
